# Rotation_Coordinate_Descent

./: README.md
demo/: README.md  build.sh  demo_rcd.m  demo_rcdl.m  tmp_out.txt
demo/scripts/: evaluate_angular_error.m  plot_angular_error.m  rot2angle.m  rotavg_rcd.m  rotavg_rcdl.m  roterr.m  visualise_camera_pose.m  visualise_camera_pose_g2o.m  w2R.m
demo/src/: CMakeLists.txt  main.cpp  main_rcdl.cpp  rcd.cpp  rcd.hpp  rcdl.cpp  rcdl.hpp  utils.cpp  utils.hpp
demo/src/cmake/: FindSuiteSparse.cmake  UpdateCacheVariable.cmake
